--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.18.2",
     "config": "^1.28.1",
     "express": "^4.16.2",
+    "lowdb": "^1.0.0",
     "react-messenger-ui": "0.0.14",
     "react-router": "^4.2.0",
     "request": "^2.83.0",
