--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "config": "^1.28.1",
     "express": "^4.16.2",
     "lowdb": "^1.0.0",
+    "pg": "^6.4.2",
+    "pg-hstore": "^2.3.2",
     "react-messenger-ui": "0.0.14",
     "react-router": "^4.2.0",
     "request": "^2.83.0",
+    "sequelize": "^4.28.6",
     "socket.io": "~0.9.14"
   },
   "devDependencies": {
