--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "async": "~0.2.8",
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
     "config": "^1.28.1",
     "express": "^4.16.2",
