--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "body-parser": "^1.18.2",
     "config": "^1.28.1",
     "express": "^4.16.2",
-    "lowdb": "^1.0.0",
     "pg": "^6.4.2",
     "pg-hstore": "^2.3.2",
     "react-messenger-ui": "0.0.14",
@@ -28,6 +27,8 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1"
