--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.18.2",
+    "buble": "^0.18.0",
     "config": "^1.28.1",
     "epilogue": "^0.7.1",
     "express": "^4.16.2",
